Add section 2 elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="section-1">
       <div class="nav">
-        <img src="#" alt="Company Logo" />
+        <img src="#" alt="Company logo" />
         <a href="#">Link 1</a>
         <a href="#">Link 1</a>
         <a href="#">Link 1</a>
@@ -18,6 +18,27 @@
         <p>Some small text</p>
         <button>A nice lil button</button>
         <img src="#" alt="Product Image" />
+      </div>
+    </div>
+    <div class="section-2">
+      <h2>Info title</h2>
+      <div class="card-container">
+        <div class="card">
+          <img src="#" alt="Info image" />
+          <p>Some text to go with the image</p>
+        </div>
+        <div class="card">
+          <img src="#" alt="Info image" />
+          <p>Some text to go with the image</p>
+        </div>
+        <div class="card">
+          <img src="#" alt="Info image" />
+          <p>Some text to go with the image</p>
+        </div>
+        <div class="card">
+          <img src="#" alt="Info image" />
+          <p>Some text to go with the image</p>
+        </div>
       </div>
     </div>
   </body>
