Add section 3 elements

--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
         </div>
       </div>
     </div>
+    <div class="section-3">
+      <p>A big quote, maybe look for a quote tag</p>
+      <p>The person who said the quote</p>
+    </div>
   </body>
 </html>
