Add section 4 elements

--- a/index.html
+++ b/index.html
@@ -45,5 +45,12 @@
       <p>A big quote, maybe look for a quote tag</p>
       <p>The person who said the quote</p>
     </div>
+    <div class="section-4">
+      <div class="action-container">
+        <h2>Call to action</h2>
+        <p>Some more text</p>
+        <button>Press Me</button>
+      </div>
+    </div>
   </body>
 </html>
