Add footer elements

--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
         <button>Press Me</button>
       </div>
     </div>
+    <div class="footer">
+      <p>My footer text</p>
+    </div>
   </body>
 </html>
