--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="section-1">
       <div class="nav">
         <img src="#" alt="Company logo" />
+        <h1>Header Logo</h1>
         <a href="#">Link 1</a>
         <a href="#">Link 1</a>
         <a href="#">Link 1</a>
@@ -43,12 +44,14 @@
       </div>
     </div>
     <div class="section-3">
-      <p>A big quote, maybe look for a quote tag</p>
-      <p>The person who said the quote</p>
+      <blockquote>
+        <p>A big quote, maybe look for a quote tag</p>
+        <footer>The person who said the quote</footer>
+      <blockquote></blockquote>
     </div>
     <div class="section-4">
       <div class="action-container">
-        <h2>Call to action</h2>
+        <h3>Call to action</h2>
         <p>Some more text</p>
         <button>Press Me</button>
       </div>
