Add fix to blockquote

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <blockquote>
         <p>A big quote, maybe look for a quote tag</p>
         <footer>The person who said the quote</footer>
-      <blockquote></blockquote>
+      </blockquote>
     </div>
     <div class="section-4">
       <div class="action-container">
