Add links to a ul

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <div class="section-1">
       <div class="nav">
-        <img src="#" alt="Company logo" />
         <h1>Header Logo</h1>
-        <a href="#">Link 1</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 1</a>
+        <ul class="nav-items">
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 1</a></li>
+        </ul>
       </div>
       <div class="header-content">
         <h1>A big title</h1>
