--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="nav">
         <h1>Header Logo</h1>
         <ul class="nav-items">
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 1</a></li>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
         </ul>
       </div>
       <div class="header-content">
