Style hero section

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         </ul>
       </div>
       <div class="header-content">
-        <h1>A big title</h1>
-        <p>Some small text</p>
-        <button>A nice lil button</button>
-        <img src="#" alt="Product Image" />
+        <div class="left">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes under the main title. It's a similar font and the color is lower contrast</p>
+          <button>Sign up</button>
+        </div>
+        <div class="image-placeholder">this is a placeholder for an image</div>
       </div>
     </div>
     <div class="section-2">
