--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
       </div>
     </div>
     <div class="section-2">
-      <h2>Info title</h2>
+      <h2>Some random information.</h2>
       <div class="card-container">
         <div class="card">
-          <img src="#" alt="Info image" />
-          <p>Some text to go with the image</p>
+          <div class="image-border"></div>
+          <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img src="#" alt="Info image" />
-          <p>Some text to go with the image</p>
+          <div class="image-border"></div>
+          <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img src="#" alt="Info image" />
-          <p>Some text to go with the image</p>
+          <div class="image-border"></div>
+          <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-          <img src="#" alt="Info image" />
-          <p>Some text to go with the image</p>
+          <div class="image-border"></div>
+          <p>this is some subtext under an illustration or image</p>
         </div>
       </div>
     </div>
