--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
     <div class="section-3">
       <blockquote>
-        <p>A big quote, maybe look for a quote tag</p>
-        <footer>The person who said the quote</footer>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks lice.</p>
+        <footer>-Thor, God of Thunder</footer>
       </blockquote>
     </div>
     <div class="section-4">
