Style action section 4

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     </div>
     <div class="section-4">
       <div class="action-container">
-        <h3>Call to action</h2>
-        <p>Some more text</p>
-        <button>Press Me</button>
+        <div class="left-cta">
+          <h3>Call to action! It's time!</h2>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
       </div>
     </div>
     <div class="footer">
