Style footer section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="footer">
-      <p>My footer text</p>
+      <p>Copyright © The Odin Project 2021</p>
     </div>
   </body>
 </html>
